--- a/AutoMall/ViewControllers/Mall/CommodityDetailStarCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailStarCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SA8-RE-kFu" customClass="DJQRateView">
@@ -26,8 +26,8 @@
                             <constraint firstAttribute="height" constant="20" id="nnm-Kn-N9G"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="akq-yq-aVm">
-                        <rect key="frame" x="311.5" y="11" width="0.0" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8大卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="akq-yq-aVm">
+                        <rect key="frame" x="279" y="11" width="32.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="61R-zo-A3S"/>
                         </constraints>
@@ -44,6 +44,13 @@
                         <color key="textColor" red="0.98431372549999996" green="0.2666666667" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="energy" translatesAutoresizingMaskIntoConstraints="NO" id="G93-7B-1zq">
+                        <rect key="frame" x="256" y="10.5" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="ofW-bM-gh1"/>
+                            <constraint firstAttribute="height" constant="20" id="wMo-BL-VWG"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="g9e-sB-XCK" firstAttribute="leading" secondItem="SA8-RE-kFu" secondAttribute="trailing" constant="16" id="E0D-TG-N0m"/>
@@ -51,6 +58,8 @@
                     <constraint firstItem="akq-yq-aVm" firstAttribute="centerY" secondItem="SA8-RE-kFu" secondAttribute="centerY" id="Lud-iS-0Sm"/>
                     <constraint firstItem="g9e-sB-XCK" firstAttribute="centerY" secondItem="SA8-RE-kFu" secondAttribute="centerY" id="UX8-I4-Lga"/>
                     <constraint firstItem="SA8-RE-kFu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="XfC-I2-lq1"/>
+                    <constraint firstItem="G93-7B-1zq" firstAttribute="centerY" secondItem="akq-yq-aVm" secondAttribute="centerY" constant="-1" id="Zf5-O4-cq3"/>
+                    <constraint firstItem="akq-yq-aVm" firstAttribute="leading" secondItem="G93-7B-1zq" secondAttribute="trailing" constant="3" id="iZE-Pg-Se8"/>
                     <constraint firstItem="SA8-RE-kFu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="vUZ-1M-WeG"/>
                 </constraints>
             </tableViewCellContentView>
@@ -62,4 +71,7 @@
             <point key="canvasLocation" x="-560" y="25"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="energy" width="20" height="20"/>
+    </resources>
 </document>
