--- a/AutoMall/ViewControllers/Mall/SettlementCell.xib
+++ b/AutoMall/ViewControllers/Mall/SettlementCell.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,13 +19,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="衬衫" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fag-Wj-k66">
-                        <rect key="frame" x="28" y="10" width="158" height="17"/>
+                        <rect key="frame" x="16" y="10" width="170" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥：100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATp-Zl-ahb">
-                        <rect key="frame" x="28" y="33" width="52.5" height="17"/>
+                        <rect key="frame" x="16" y="33" width="52.5" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="rqt-Lh-Qwu"/>
                         </constraints>
@@ -63,6 +62,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="fag-Wj-k66" secondAttribute="trailing" constant="134" id="3QM-Il-smq"/>
+                    <constraint firstItem="fag-Wj-k66" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4iZ-vb-4YH"/>
                     <constraint firstItem="ORV-1F-sba" firstAttribute="width" secondItem="fWo-NW-L5P" secondAttribute="width" id="6pM-Ge-JqL"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="centerY" secondItem="fWo-NW-L5P" secondAttribute="centerY" id="B4Z-fd-qFx"/>
                     <constraint firstItem="fWo-NW-L5P" firstAttribute="leading" secondItem="Uds-sv-RbJ" secondAttribute="trailing" constant="-18" id="EoS-6L-IuX"/>
@@ -71,11 +71,10 @@
                     <constraint firstAttribute="bottom" secondItem="ATp-Zl-ahb" secondAttribute="bottom" constant="10" id="Qg0-uu-crJ"/>
                     <constraint firstItem="fag-Wj-k66" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Z7N-0W-UKS"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="width" secondItem="fWo-NW-L5P" secondAttribute="width" id="fLY-aq-Fjc"/>
-                    <constraint firstItem="fag-Wj-k66" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="gc4-M0-JZN"/>
                     <constraint firstItem="ORV-1F-sba" firstAttribute="height" secondItem="fWo-NW-L5P" secondAttribute="height" id="heT-TG-n2f"/>
                     <constraint firstItem="ORV-1F-sba" firstAttribute="centerY" secondItem="fWo-NW-L5P" secondAttribute="centerY" id="jYN-ka-WKn"/>
+                    <constraint firstItem="ATp-Zl-ahb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="kgO-Kv-fBu"/>
                     <constraint firstItem="fWo-NW-L5P" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="lge-gp-Ohs"/>
-                    <constraint firstItem="ATp-Zl-ahb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="pOA-mf-wlU"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="leading" secondItem="ORV-1F-sba" secondAttribute="trailing" constant="-18" id="rBl-Qi-iCY"/>
                     <constraint firstAttribute="trailing" secondItem="fWo-NW-L5P" secondAttribute="trailing" constant="8" id="wLI-3B-bWm"/>
                 </constraints>
