--- a/AutoMall/ViewControllers/Upkeep/UpkeepPlanSelectServiceCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepPlanSelectServiceCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,16 +15,16 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7SL-BN-LGC">
-                        <rect key="frame" x="8" y="7" width="30" height="30"/>
+                        <rect key="frame" x="8" y="0.0" width="44" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="K6d-uj-Kmv"/>
-                            <constraint firstAttribute="width" constant="30" id="Uue-Re-am3"/>
+                            <constraint firstAttribute="height" constant="44" id="K6d-uj-Kmv"/>
+                            <constraint firstAttribute="width" constant="44" id="Uue-Re-am3"/>
                         </constraints>
-                        <inset key="imageEdgeInsets" minX="3" minY="3" maxX="3" maxY="3"/>
+                        <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                         <state key="normal" image="checkbox_no"/>
                         <state key="selected" image="checkbox_yes"/>
                     </button>
@@ -38,7 +38,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="机油更换" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="Vtx-Dh-XWW" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="46" y="11.5" width="57.5" height="21"/>
+                        <rect key="frame" x="60" y="11.5" width="57.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="KJo-Ij-W7n"/>
                         </constraints>
